--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -5,6 +5,7 @@ layout: default
 <div class="row">
 <section class="layout-content">
 	{% include nav-breadcrumbs.html %}
+	<h1>{{page.title}}</h1>
 	{{content}}
 </section>
 
