added reigions pages and more content to boilerplate pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,9 @@ nav-breadcrumbs:
     <meta prefix="og:http://ogp.me/ns#" property="og:image" content="https://www.entsoe.eu/Style%20Library/EntsoePublishingBranding/Images/entsoe-logo1.png" />
 
     <link rel="stylesheet" href="{{ "/assets/css/app.css" | prepend: site.baseurl }}">
+    
     <script src="//use.edgefonts.net/source-sans-pro;merriweather:n3,n4,n7,n9.js"></script>
+
     <style type="text/css">
   
 </style>
@@ -54,6 +56,6 @@ nav-breadcrumbs:
 
     {% include newsletter-signup.html %}
     {% include global-footer.html %}
-
+<script src="{{ "/assets/js/app.js" | prepend: site.baseurl }}"></script>
   </body>
 </html>
