made various changes to files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,8 @@ nav-breadcrumbs:
   </head>
   <body>
       {% include nav.html masthead="no" %}
-  	<main class="column">
+  	<!--<main class="column">-->
+    <main>
   		{{ content }}
   	</main>
 
