--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -6,7 +6,21 @@ layout: default
 <section class="layout-content">
 	{% include nav-breadcrumbs.html %}
 	<h1>{{page.title}}</h1>
+	<div class="row">
+		<p>{{page.bumf}}</p>
+	</div>
+</section>
+
+</div>
+
+
+
+<!--<div class="row">-->
+<div>
+<!--<section class="layout-content">-->
+<section>
 	{{content}}
 </section>
 
 </div>
+
