added breadcrumbs to focus report

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -54,7 +54,7 @@
   {% if page.masthead-custom %}global-header-custom{% endif %}
   ">
 
-<a href="{{"/assets/img/ee-logo.png" | prepend: site.baseurl }}" class="global-header-logo">
+<a href="{{"/" | prepend: site.baseurl }}" class="global-header-logo">
       <img src="{{"/assets/img/ee-logo.png" | prepend: site.baseurl }}" alt="ENTSO-E logo" />
   </a>
 
