--- a/_includes/nav-breadcrumbs.html
+++ b/_includes/nav-breadcrumbs.html
@@ -1,9 +1,9 @@
 <nav class="nav-breadcrumbs " role="navigation">
   <ul class="breadcrumbs">
-    <li><a href="/">Home</a></li>
+    <li><a href="{{"/" | prepend: site.baseurl }}">Home</a></li>
     {% for nav_hash in page.nav-breadcrumbs %}
       {% for link in nav_hash %}
-        <li><a href="{{ link[1] }}">{{ link[0] }}</a></li>
+        <li><a href="{{ link[1] | prepend: site.baseurl }}">{{ link[0] }}</a></li>
       {% endfor %}
     {% endfor %}
   </ul>
